# django_ip_safeguard

./: .gitignore  .pypi-token.env.example  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.workflow/: branch-pipeline.yml  master-pipeline.yml  pr-pipeline.yml
demo2/: requirements-from-dist.txt
demo2/demo2/: settings.py  urls.py
demo_project/demo_site/: asgi.py  settings.py  urls.py  wsgi.py
django_ip_safeguard/: __init__.py  admin.py  apps.py  celery.py  conf.py  exceptions.py  middleware.py  models.py  signals.py  types.py  urls.py  views.py
django_ip_safeguard/contrib/: __init__.py
django_ip_safeguard/contrib/admin_frontend/: index.html  package.json  views.py  vite.config.js
django_ip_safeguard/management/commands/: download_geoip2_db.py  run_task_scheduler.py  snapshot_ip_reputation.py  sync_geo_ip_pools.py  sync_threat_intel.py  update_geoip2_db.py
django_ip_safeguard/migrations/: 0001_initial.py  0002_ipguardpolicy_ip_blacklist_and_rate_limit.py  0003_ipguardpolicy_geo_pools_ipgeopoolstatus.py  0004_ipreputationhistory_threatintelfeedstatus_and_more.py  0005_userprofile.py  0006_userprofile_email_token_expires_and_more.py  0007_add_2fa_lock_fields.py  0008_add_apikey_usage_log.py  0009_scheduled_task.py  0010_policy_v2.py  0011_country_mode_accesslog_user.py
django_ip_safeguard/services/: action_executor.py  asn_lookup.py  audit_service.py  ban_service.py  cache.py  circuit_breaker.py  decision_metrics.py  email_service.py  enhanced_reputation.py  geo_ip_pool_index.py  geo_ip_pool_runtime.py  geo_ip_pool_sync.py  ip_correlation.py  ip_matcher.py  ip_resolver.py  jwt_service.py  layered_cache.py  local_risk_engine.py  login_throttle.py  metrics_collector.py  policy_router.py  policy_service.py  provider_base.py  provider_chain.py  provider_factory.py  provider_geoip2.py  provider_http.py  risk_engine.py  structured_decision_log.py  task_scheduler.py  threat_intel_subscriber.py
docs/: 01-产品概述与术语.md  02-安装与环境要求.md  03-中间件与请求判定流程.md  04-配置项完整参考.md  05-策略中心与数据库模型.md  06-地理IP池与定时同步.md  07-IP情报Provider与风险引擎.md  08-Redis缓存封禁限流与熔断.md  09-管理REST-API参考.md  10-认证CSRF-JWT与权限模型.md  11-Vue管理控制台使用说明.md  12-审计日志与运营大盘.md  13-运维部署与监控.md  14-管理命令与定时任务.md  15-开发与测试指南.md  16-多语言i18n配置与切换.md  README.md  django-ip-guard-开发与发布指南.md
docs/en/: 01-quick-start.md  02-installation.md  03-middleware.md  04-configuration-reference.md  05-models.md  06-api-reference.md  07-frontend-dashboard.md  08-deployment.md  09-development.md  README.md
docs/zh/: 01-quick-start.md  02-installation.md  03-middleware.md  04-configuration-reference.md  05-models.md  06-api-reference.md  07-frontend-dashboard.md  08-deployment.md  09-development.md  README.md
frontend-admin/: index.html  package-lock.json  package.json  vite.config.js
frontend-admin/src/: main.js
frontend-admin/src/api/: export.js  http.js  index.js
frontend-admin/src/components/: DashboardRecentRecords.vue  DashboardWorldIpMap.vue
frontend-admin/src/i18n/: en.js  zh.js
frontend-admin/src/layouts/: AppLayout.vue
scripts/: gitee-python-build.sh
tests/: conftest.py  test_action_executor.py  test_audit_service.py  test_cache_service.py  test_circuit_breaker.py  test_conf.py  test_conf_nested_ip_guard.py  test_country_policy_mode.py  test_django_admin_users_api.py  test_geo_ip_pool_index.py  test_geo_ip_pool_sync.py  test_ip_matcher.py  test_ip_resolver.py  test_jwt_service.py  test_middleware.py  test_middleware_integration.py  test_new_services.py  test_phase2_policies_metrics_api.py  test_policy_router.py  test_policy_service.py  test_provider.py  test_risk_engine.py  test_risk_engine_v2.py
(+188 files in other folders)
