[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ip-safeguard"
version = "0.1.0"
description = "Django IP风险拦截插件，支持风险查询、地区规则和自动封禁。"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "xiaohaige" }
]
dependencies = [
  "Django>=4.2",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "PyJWT>=2.8.0",
  "django-unfold>=0.40.0",
  "pyotp>=2.9.0",
  "qrcode>=7.4",
]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
geoip2 = [
  "geoip2>=4.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-django>=4.8.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.1.0"
]

[project.urls]
Homepage = "https://pypi.org/project/django-ip-safeguard/"
Documentation = "https://pypi.org/project/django-ip-safeguard/"
Repository = "https://example.com/your-repo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_ip_safeguard*"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
