[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ip-safeguard"
version = "0.3.3"
description = "Django IP Risk Guard - IP risk query, geographical rules and automatic blocking plugin"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "xiaohaige", email = "haige1026@qq.com" }
]
keywords = ["django", "ip", "security", "risk", "guard", "firewall", "blocking", "geoip"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "Django>=6.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "django-unfold>=0.40.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4",
    "celery>=5.3.0",
    "django-celery-beat>=2.5.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
geoip2 = [
    "geoip2>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.6.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/hayratjan/django_ip_safeguard"
Documentation = "https://github.com/hayratjan/django_ip_safeguard#readme"
Repository = "https://github.com/hayratjan/django_ip_safeguard.git"
Issues = "https://github.com/hayratjan/django_ip_safeguard/issues"

[tool.setuptools]
# 与 MANIFEST.in 配合，把 admin_frontend 构建产物打进发行包
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["django_ip_safeguard*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo_project.demo_site.settings"
pythonpath = ["demo_project"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
